--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-google-generativeai
-tavily-python
-beautifulsoup4
-requests
-gspread
-oauth2client
-PyPDF2
-pandas
+streamlit>=1.35.0
+google-generativeai>=0.8.0
+tavily-python>=0.3.0
+beautifulsoup4>=4.12.0
+requests>=2.31.0
+gspread>=6.0.0
+oauth2client>=4.1.3
+PyPDF2>=3.0.0
+pandas>=2.0.0
